# gl-117

./: AUTHORS  ChangeLog  FAQ  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  depcomp  gl-117.desktop  gl-117.spec  install-sh  meson.build  mkinstalldirs  readme.txt  rebuild  win2unix
doc/: gl-117.6  meson.build
doc/src/: aerodynamics.tex  basics.tex  gl-117.tex  installation.tex  make-pdf.sh  meson.build  squad.tex  title.tex
maps/: demo1.map  maps.txt  meson.build  tirol.map
models/: cannon1.3ds  cannon2.3ds  container1.3ds  egg.3ds  fig1.3ds  fig2.3ds  fig3.3ds  fig4.3ds  fig5.3ds  fig6.3ds  fig7.3ds  fig8.3ds  fig9.3ds  flak2.3ds  flarak1.3ds  gl-14.3ds  gl-14b.3ds  gl-14c.3ds  gl-14d.3ds  gl-15.3ds  gl-15e.3ds  gl-16.3ds  gl-21.3ds  gl-21b.3ds  hall1.3ds  hall2.3ds  meson.build  mig-29.3ds  oilrig.3ds  pickup1.3ds  pickup2.3ds  ship1.3ds  ship2.3ds  tank1.3ds  tank2.3ds  transp1.3ds  trsam.3ds  truck1.3ds  truck2.3ds
music/: computa2.xm  dark.s3m  electro.s3m  meson.build  softtec.s3m  standby.s3m  stars.s3m  strife.it  sunarmada.it
shaders/: meson.build  tree.cg  tree.vert
sounds/: meson.build
src/: 3ds.cpp  3ds.h  Makefile  Makefile.am  Makefile.in  aiobject.cpp  aiobject.h  audio.cpp  audio.h  cockpit.cpp  cockpit.h  common.cpp  common.h  conf.cpp  conf.h  config.h.in  dirs.cpp  dirs.h  effects.cpp  effects.h  fileloader.cpp  fileloader.h  gl.cpp  gl.h  glland.cpp  glland.h  land.cpp  land.h  loader_tga.cpp  loader_tga.h  main.cpp  main.dsp  main.dsw  main.h  main.sln  main.vcproj  maploader.cpp  maploader.h  mathtab.cpp  mathtab.h  (+18 more)
src/aiobject/: AiObj.cpp  AiObj.h  AiObjPrototype.cpp  DynamicObj.cpp  DynamicObjPrototype.cpp  Fighter.cpp  FighterPrototype.cpp  Missile.cpp  Ship.cpp  StaticAa.cpp  StaticPassive.cpp  Tank.cpp  UnitDescriptor.cpp  UnitDescriptorRegistry.cpp  UnitPrototype.h
src/cockpit/: Cockpit.cpp  Cockpit.h
src/configuration/: ConfigFile.cpp  Configuration.cpp  Configuration.h  Directory.cpp  Directory.h  Dirs.cpp  Dirs.h  OptionFile.cpp  OptionFileFactory.cpp
src/effects/: BlackSmoke.cpp  Effects.h  Explosion.cpp  Flash.cpp  Font.cpp  HighClouds.cpp  Smoke.cpp  Star.cpp
src/filetokenizer/: FileTokenizer.cpp  FileTokenizer.h
src/game/: Callbacks.cpp  Callbacks.h  Events.h  Game.cpp  Game.h  GameState.cpp  GameState.h  globals.h
src/gllandscape/: GlLandscape.cpp  GlLandscape.h
src/landscape/: Landscape.cpp  Landscape.h
src/loadbitmap/: Bitmap.cpp  Bitmap.h  BitmapFactory.cpp  LoadTga.cpp  LoadTga.h
src/loadmodel/: BinaryFile3ds.cpp  Load3ds.cpp  Load3ds.h  LoadObj.cpp  LoadObj.h  Model3dFactory.cpp  Model3dFactory.h  Model3dRegistry.cpp  Model3dRegistry.h  TextFileObj.cpp
src/logging/: Logging.cpp  Logging.h
src/math/: Math.cpp  Math.h
src/menu/: Button.cpp  Component.cpp  Component.h  Container.cpp  EditField.cpp  EditJoystick.cpp  EditKey.cpp  Label.cpp  TextField.cpp
src/mission/: MapLoader.cpp  MapLoader.h  Mission.cpp  Mission.h  MissionAirBattle.cpp  MissionBase.cpp  MissionCanyon1.cpp  MissionCanyon2.cpp  MissionCanyon3.cpp  MissionConvoy.cpp  MissionConvoy2.cpp  MissionDeathMatch1.cpp  MissionDeathMatch2.cpp  MissionDeathMatch3.cpp  MissionDefend1.cpp  MissionDemo1.cpp  MissionDepot.cpp  MissionDogfight1.cpp  MissionDogfight2.cpp  MissionDogfight3.cpp  MissionFreeFlight1.cpp  MissionGround1.cpp  MissionMoonBase1.cpp  MissionMoonBattle.cpp  MissionMoonDefense1.cpp  MissionMoonDogfight1.cpp  MissionMultiDogfight1.cpp  MissionScout.cpp  MissionShip1.cpp  MissionShip2.cpp  MissionShip3.cpp  MissionTank1.cpp  MissionTeamBase1.cpp  MissionTest1.cpp  MissionTest2.cpp  MissionTransport.cpp  MissionTunnel1.cpp  MissionTutorial1.cpp  MissionTutorial2.cpp  MissionTutorial3.cpp  (+1 more)
src/model3d/: Color.cpp  Material.cpp  Model3d.cpp  Model3d.h  Object3d.cpp  Quad.cpp  Rotation.cpp  Space.cpp  SpaceObj.cpp  Sphere.cpp  SpherePart.cpp  Texture.cpp  Transformation.cpp  Triangle.cpp  Vector2.cpp  Vector3.cpp  Vertex.cpp
src/net/: Client.cpp  Server.cpp  net.cpp  net.h
src/opengl/: Frustum.cpp  GlPrimitives.cpp  GlPrimitives.h  VertexArray.cpp  includegl.h
src/pilot/: Pilot.cpp  Pilot.h  PilotList.cpp  TeamPilot.cpp
src/render/: Realizer.h  Render.cpp  Render.h
src/shader/: GlShaders.cpp  GlShaders.h
src/sound/: SoundSystem.cpp  SoundSystem.h  WaveFile.cpp
src/util/: Math.cpp  Math.h  StringUtil.cpp  Util.h
textures/: clouds2.tga  counter.tga  cross.tga  egg_chec.tga  fig1_fra.tga  fig2_fra.tga  fig3_fra.tga  fig5_fra.tga  fig7_fra.tga  fig8_noi.tga  fig9_noi.tga  font1.tga  font2.tga  gl-117_c.tga  gl-14c_c.tga  gl-14d_c.tga  glitter.tga  grass1.tga  medals.tga  meson.build  mig-29.tga  radar1.tga  radar2.tga  ranks.tga  rocks1.tga  sand1.tga  smoke1.tga  sun2.tga  title.tga  tree1.tga  tree2.tga  treeu2.tga  walls_co.tga  water2.tga
units/: AamFf1.txt  AamFf2.txt  AamHs1.txt  AamHs2.txt  AamHs3.txt  Agm1.txt  Agm2.txt  Asteroid.txt  BigTent.txt  BlackBird.txt  Buzzard.txt  Cannon1.txt  Cannon2.txt  Cannon2b.txt  Chaff.txt  Complex.txt  Container.txt  Crow.txt  Cruiser.txt  Depot.txt  Dfm.txt  Falcon.txt  Hall.txt  Hall2.txt  Hawk.txt  Hawk2.txt  House.txt  LaserBarrier.txt  LightDestroyer.txt  Mine.txt  MobileSam.txt  MoonBase.txt  Oilrig.txt  Panther.txt  Phoenix.txt  Pickup.txt  Pickup2.txt  Radar.txt  RedArrow.txt  Rubble.txt  (+13 more)
