AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE(gl-117,0.8.2,200302170000)
AM_CONFIG_HEADER(config.h)

AH_TEMPLATE([HAVE_SDL],[Use SDL library])
AH_TEMPLATE([HAVE_SDL_MIXER],[Use SDL mixer library])
AH_TEMPLATE([HAVE_GL],[Use GL library])
AH_TEMPLATE([HAVE_GLU],[Use GLU library])
AH_TEMPLATE([HAVE_GLUT],[Use GLUT library])

LDFLAGS="$LDFLAGS -lm"

AC_PROG_CXX
AC_PROG_CC
AC_LANG_C

AC_PROG_INSTALL

AC_PROG_MAKE_SET

AC_C_BIGENDIAN()
AC_CHECK_HEADER(GL/gl.h,AC_DEFINE(HAVE_GL),AC_MSG_ERROR(gl.h not found - please install OpenGL- or Mesa-devel))
AC_CHECK_HEADER(GL/glu.h,AC_DEFINE(HAVE_GLU),AC_MSG_ERROR(glu.h not found - please install GLU- or MesaGLU-devel))
AC_CHECK_HEADER(GL/glut.h,AC_DEFINE(HAVE_GLUT),AC_MSG_ERROR(glut.h not found - please install GLUT- or MesaGLUT-devel))
AC_CHECK_HEADER(SDL/SDL.h,AC_DEFINE(HAVE_SDL),AC_MSG_WARN(SDL.h not found - no sounds and no joystick available))
AC_CHECK_HEADER(SDL/SDL_mixer.h,AC_DEFINE(HAVE_SDL_MIXER),AC_MSG_WARN(SDL_mixer.h not found - no advanced sounds available))

AC_CHECK_LIB(GL,glEnable,LIBS="$LIBS -lGL",AC_MSG_ERROR(GL not found - please install GL or MesaGL))
AC_CHECK_LIB(GLU,gluPerspective,LIBS="$LIBS -lGLU",AC_MSG_ERROR(GLU not found - please install GLU or MesaGLU))
AC_CHECK_LIB(glut,glutMainLoop,LIBS="$LIBS -lglut",AC_MSG_ERROR(GLUT not found - please install GLUT or MesaGLUT))
AC_CHECK_LIB(SDL,SDL_Init,LIBS="$LIBS -lSDL -lSDLmain",AC_MSG_WARN(SDL not found - please install SDL))
AC_CHECK_LIB(SDL_mixer,Mix_LoadMUS,LIBS="$LIBS -lSDL_mixer",AC_MSG_WARN(SDL_mixer not found - please install SDL_mixer))

CFLAGS="$CFLAGS -Wall -pedantic"
CPPFLAGS="-DDATADIR='\"$datadir\"'"

AC_OUTPUT([
Makefile
src/Makefile
])

