install_data([
    'aster1.3ds',
    'barrier.3ds',
    'base1.3ds',
    'blackbird.3ds',
    'buzzard.3ds',
    'cannon1.3ds',
    'cannon1b.3ds',
    'cannon2.3ds',
    'cannon2b.3ds',
    'chaff1.3ds',
    'complex.3ds',
    'container1.3ds',
    'crow.3ds',
    'depot1.3ds',
    'falcon.3ds',
    'flak2.3ds',
    'flarak1.3ds',
    'flare1.3ds',
    'gl-117.3ds',
    'gl-29.3ds',
    'hall1.3ds',
    'hall2.3ds',
    'hawk2.3ds',
    'hawk.3ds',
    'house1.3ds',
    'mig-29.3ds',
    'mine1.3ds',
    'missile1.3ds',
    'missile2.3ds',
    'missile3.3ds',
    'missile4.3ds',
    'missile5.3ds',
    'missile6.3ds',
    'missile7.3ds',
    'missile8.3ds',
    'oilrig.3ds',
    'phoenix.3ds',
    'pickup1.3ds',
    'pickup2.3ds',
    'radar.3ds',
    'redarrow.3ds',
    'rubble.3ds',
    'ship1.3ds',
    'ship2.3ds',
    'storm.3ds',
    'swallow.3ds',
    'tank1.3ds',
    'tank2.3ds',
    'tent1.3ds',
    'tent4.3ds',
    'transport2.3ds',
    'transport.3ds',
    'trsam.3ds',
    'truck1.3ds',
    'truck2.3ds',
    'wall.3ds',
  ],
  install_dir: gl_117_datadir / 'models'
)
