AUTOMAKE_OPTIONS = gnu
bin_PROGRAMS = gl-117
gl_117_SOURCES = main.cpp gl.cpp model.cpp 3ds.cpp audio.cpp land.cpp glland.cpp aiobject.cpp effects.cpp roam.cpp net.cpp mathtab.cpp dirs.cpp objload.cpp pilots.cpp loader_tga.cpp object.cpp conf.cpp mission.cpp cockpit.cpp common.cpp
noinst_HEADERS =
DEFS=-I. -I..
