install_data([
    'arrow.tga',
    'aster1_n.tga',
    'barrier_.tga',
    'base1_no.tga',
    'cactus1.tga',
    'cactusu1.tga',
    'camoufl.tga',
    'chaff_ch.tga',
    'clouds1.tga',
    'clouds2.tga',
    'clouds3.tga',
    'cross2.tga',
    'cross.tga',
    'depot_fr.tga',
    'eagle_gr.tga',
    'earth.tga',
    'egg_chec.tga',
    'flare1.tga',
    'flare2.tga',
    'flare3.tga',
    'flare4.tga',
    'flare_ch.tga',
    'font1.tga',
    'font2.tga',
    'gl-14b_c.tga',
    'gl-14b_d.tga',
    'gl-14_c2.tga',
    'gl-14c_c.tga',
    'gl-14c_d.tga',
    'gl-14_ch.tga',
    'gl-14d_c.tga',
    'gl-14d_d.tga',
    'gl-15_c2.tga',
    'gl-15_ch.tga',
    'gl-16_c2.tga',
    'gl-16_ch.tga',
    'gl-21b_c.tga',
    'gl-21b_d.tga',
    'gl-21_c2.tga',
    'gl-21_ch.tga',
    'gl-29_ch.tga',
    'gl-50_c2.tga',
    'gl-50_ch.tga',
    'glitter.tga',
    'grass1.tga',
    'gravel1.tga',
    'greendrk.tga',
    'greenlit.tga',
    'greygrid.tga',
    'hall1b_g.tga',
    'hall2b_c.tga',
    'house_s1.tga',
    'medals.tga',
    'mig-29.tga',
    'moon1.tga',
    'oilrig_c2.tga',
    'oilrig_c.tga',
    'panzer1_.tga',
    'panzer2_.tga',
    'patents.tga',
    'radar1.tga',
    'radar2.tga',
    'ranks.tga',
    'redsand1.tga',
    'redstone2.tga',
    'rocks1.tga',
    'roof.tga',
    'sand1.tga',
    'ship2_fr.tga',
    'ship_fra.tga',
    'smoke1.tga',
    'smoke2.tga',
    'smoke3.tga',
    'sun2.tga',
    'tent1_no.tga',
    'tent4_fr.tga',
    'title.tga',
    'transp2_.tga',
    'transp4_.tga',
    'tree1.tga',
    'tree2.tga',
    'tree3.tga',
    'tree4.tga',
    'tree5.tga',
    'treeu1.tga',
    'treeu2.tga',
    'treeu3.tga',
    'treeu4.tga',
    'treeu5.tga',
    'water1.tga',
    'wheel.tga',
  ],
  install_dir: gl_117_datadir / 'textures'
)

