install_data([
    'AamFf1.txt',
    'AamFf2.txt',
    'AamHs1.txt',
    'AamHs2.txt',
    'AamHs3.txt',
    'Agm1.txt',
    'Agm2.txt',
    'Asteroid.txt',
    'BigTent.txt',
    'BlackBird.txt',
    'Buzzard.txt',
    'Cannon1b.txt',
    'Cannon1.txt',
    'Cannon2b.txt',
    'Cannon2.txt',
    'Chaff.txt',
    'Complex.txt',
    'Container.txt',
    'Crow.txt',
    'Cruiser.txt',
    'Depot.txt',
    'Dfm.txt',
    'Falcon.txt',
    'Flare.txt',
    'Hall2.txt',
    'Hall.txt',
    'Hawk2.txt',
    'Hawk.txt',
    'House.txt',
    'LaserBarrier.txt',
    'LightDestroyer.txt',
    'Mine.txt',
    'MobileSam.txt',
    'MoonBase.txt',
    'Oilrig.txt',
    'Panther.txt',
    'Phoenix.txt',
    'Pickup2.txt',
    'Pickup.txt',
    'Radar.txt',
    'RedArrow.txt',
    'Rubble.txt',
    'Sac.txt',
    'Sam.txt',
    'Storm.txt',
    'Swallow.txt',
    'Tent.txt',
    'Transport2.txt',
    'Transport.txt',
    'Truck2.txt',
    'Truck.txt',
    'Wiesel.txt',
  ],
  install_dir: gl_117_datadir / 'units'
)

